<resources>
    <string name="app_name">A.R.M</string>
    <string name="app_name2">A . R . M</string>
    <string name="home">홈</string>
    <string name="bookmark_title">★</string>
    <string name="setting_title">설정</string>
    <string name="thema_knew">테마별 지식</string>
    <string name="today_knew">오늘의 지식</string>
    <string name="philosophy">철학</string>
    <string name="history">역사</string>
    <string name="music">음악</string>
    <string name="humanities">인문학</string>
    <string name="economy">경제</string>
    <string name="bookmark">즐겨찾기</string>
    <string name="settings">시간설정</string>
    <string name="info">앱 정보</string>
    <string name="version">0.0.1 ver</string>
    <string name="version_date">2018.12.05</string>
    <string name="license_txt">MIT License\n\nCopyright (c) 2018 ParkJYeon\n\n

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:
\n\n
The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.
\n\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>
</resources>
