<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/home">
        <menu>
            <item
                android:id="@+id/today_knew"
                android:title="@string/today_knew"
                android:tag="@string/today_knew"/>
        </menu>
    </item>

    <item android:title="@string/thema_knew">
        <menu>
            <item
                android:id="@+id/philosophy"
                android:title="@string/philosophy"
                android:tag="@string/philosophy"/>
            <item
                android:id="@+id/history"
                android:title="@string/history"
                android:tag="@string/history"/>
            <item
                android:id="@+id/humanities"
                android:title="@string/humanities"
                android:tag="@string/humanities"/>
            <item
                android:id="@+id/music"
                android:title="@string/music"
                android:tag="@string/music"/>
            <item
                android:id="@+id/economy"
                android:title="@string/economy"
                android:tag="@string/economy"/>

        </menu>
    </item>

    <item android:title="@string/bookmark_title">
        <menu>
            <item
                android:id="@+id/bookmark"
                android:title="@string/bookmark"/>
        </menu>
    </item>

    <item android:title="설정">
        <menu>
            <item
                android:id="@+id/settings"
                android:title="시간설정"/>
            <item
                android:id="@+id/info"
                android:title="앱 정보"/>
        </menu>
    </item>
</menu>